--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -27,6 +27,7 @@
 
 <button bindtap="jumpToMap">进入map</button>
 <button bindtap="jumpToCoreChar">进入CoreChar</button>
+<button bindtap="jumpToPlaceAchievement">进入地点成就</button>
   <view class="environment" bindtap="onChangeShowEnvChoose">当前环境 {{ selectedEnv.alias }}</view>
 
   <cloud-tip-modal showUploadTipProps="{{showUploadTip}}"></cloud-tip-modal>
