--- a/miniprogram/pages/placeAchievement/index.wxml
+++ b/miniprogram/pages/placeAchievement/index.wxml
@@ -2,13 +2,6 @@
 <van-dropdown-menu>
   <van-dropdown-item value="{{ value1 }}" options="{{ option1 }}" bind:change="onChange"/>
 </van-dropdown-menu>
-<!-- <van-sidebar active-key="{{ activeKey }}" bind:change="onChange">
-  <van-sidebar-item title="标签名 1" />
-  <van-sidebar-item title="标签名 2" />
-  <van-sidebar-item title="标签名 3" />
-</van-sidebar>
-
-<van-notify id="van-notify" /> -->
 
 <view style="">
 <map style="width:100%;height:100vh"
@@ -17,5 +10,6 @@
       scale="6"
       markers="{{markers}}"
       polyline=""
-      include-points="{{markers}}"></map>
+      include-points="{{markers}}"
+      bindcallouttap="goToPlaceInfo"></map>
 </view>
