--- a/miniprogram/pages/charMap/index.wxml
+++ b/miniprogram/pages/charMap/index.wxml
@@ -1,4 +1,4 @@
 <!--miniprogram/pages/charMap/index.wxml-->
-<image style="width: 750rpx; height: 490rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx" 
-  src="https://ftp.bmp.ovh/imgs/2021/07/e7bb88ee90031ab4.png"
+<image style="width: 743rpx; height: 1323rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx" 
+  src="https://s3.bmp.ovh/imgs/2021/08/67089926f9b8036c.png"
 />
