--- a/miniprogram/pages/charMap/index.wxml
+++ b/miniprogram/pages/charMap/index.wxml
@@ -2,3 +2,4 @@
 <image style="width: 743rpx; height: 1323rpx; display: block; box-sizing: border-box; left: NaNrpx; top: NaNrpx" 
   src="https://s3.bmp.ovh/imgs/2021/08/67089926f9b8036c.png"
 />
+<van-toast id="van-toast" />
