--- a/miniprogram/pages/placeInfo/index.wxss
+++ b/miniprogram/pages/placeInfo/index.wxss
@@ -1,29 +1,42 @@
 /* miniprogram/pages/placeInfo/index.wxss */
 
+page {
+  padding-top: 54rpx;
+  background-color: #f6f6f6;
+  padding-bottom: 60rpx;
+  background:url("https://s3.bmp.ovh/imgs/2021/08/3c6ce1f55ae171cb.jpg");
+  background-size:100% 100%;
+  -moz-background-size:100% 100%;
+  background-repeat: repeat;
+}
 
 .place-info-title {
   margin: 20rpx auto 0 auto;
   text-align: center;
-  background-color: #66ccff;
+  background: url("https://box.nju.edu.cn/f/3a67353c8f6645ab957b/?dl=1");
+  background-size:100% 100%;
   width: 100px;
 }
 
 .place-info-basic {
   margin: 20rpx auto 0 auto;
   text-align: center;
-  background-color: #66ccff;
+  background: url("https://box.nju.edu.cn/f/ea28915cf9de49699b40/?dl=1");
+  background-size:100% 100%;
 }
 
 .place-info-intro {
   margin: 20rpx auto 0 auto;
   text-align: center;
-  background-color: #66ccff;
+  background: url("https://box.nju.edu.cn/f/26afd7b3b29e48b38358/?dl=1");
+  background-size:100% 100%;
 }
 
 .place-info-story {
   margin: 20rpx auto 0 auto;
   text-align: center;
-  background-color: #66ccff;
+  background: url("https://box.nju.edu.cn/f/8826c7d41d0f42829804/?dl=1");
+  background-size:100% 100%;
 }
 
 .place-info-img {
